<resources>
    <string name="app_name">MedLife</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Enter_Username">Enter Username</string>
    <string name="Password">Password</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Register">Register</string>
    <string name="Register_yourself">Register Here</string>
    <string name="Name">Name</string>
    <string name="Enter_Name">Enter Name</string>
    <string name="Age">Age</string>
    <string name="Enter_Age">Enter Age</string>
    <string name="Phone">Phone Number</string>
    <string name="Enter_Phone">Enter Phone No.</string>
    <string name="City">City</string>
    <string name="Enter_City">Enter_City</string>
    <string name="Confirm">Confirm Password</string>
    <string name="Enter_Confirm">Re-enter Password</string>
    <string name="Register_Now">Register Now</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Select">Choose</string>
    <string name="Confirm1">Confirm</string>
    <string name="welcome">Welcome </string>
    <string name="Prescription">Prescription</string>
    <string name="Appointment">Appointment</string>
    <string name="Record">Records</string>
    <string name="Temp">Temperature</string>
    <string name="Max_Temp">Max Temperature :</string>
    <string name="Min_Temp">Min Temperature :</string>
    <string name="Avg">Avg. Pulse Rate : </string>
    <string name="Back">Back</string>
    <string name="Medical">Medical Prescription</string>
    <string name="Select_Date">Select Date</string>
    <string name="Patient_Name">Patient Name : </string>
    <string name="Enter">Enter Patient Name</string>
    <string name="Date">Date : </string>
    <string name="Enter_Date">Enter Date</string>
    <string name="Write">Write Prescription Here</string>
    <string name="Save">Save</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Confirm2">Confirm the appointments</string>
    <string name="Request">Appointment requests will be seen here...</string>
    <string name="Accept">Enter the patients ID whose appointment is to be confirmed</string>
    <string name="Details">Select details for appointment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>