<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background8"
    android:onClick="registerNow"
    tools:context=".Registeration">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register_Now"
        android:textColor="@color/black"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="511dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="370dp"
        android:layout_height="74dp"
        android:text="@string/Register_yourself"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/black"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="51dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="437dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="386dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="335dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/City"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="284dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="238dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Age"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="195dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="151dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="329dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/Enter_Name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        tools:layout_editor_absoluteY="153dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="363dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/Enter_Age"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        tools:layout_editor_absoluteY="193dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Enter_Phone"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="354dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/Enter_City"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        tools:layout_editor_absoluteY="284dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="277dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/Enter_Username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        tools:layout_editor_absoluteY="335dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="277dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:hint="@string/Enter_Password"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        tools:layout_editor_absoluteY="386dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="192dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/Enter_Confirm"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        tools:layout_editor_absoluteY="437dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>