<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Records"
    android:background="@drawable/background8"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Record"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="408dp"
        android:layout_height="190dp"
        app:srcCompat="@drawable/graph1"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="125dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Temp"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Max_Temp"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="376dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="202dp"
        android:layout_height="33dp"
        android:layout_marginStart="4dp"
        android:hint="@string/Max_Temp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        tools:layout_editor_absoluteY="376dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="201dp"
        android:layout_height="33dp"
        android:text="@string/Min_Temp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="205dp"
        android:layout_height="32dp"
        android:hint="@string/Min_Temp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Avg"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        tools:layout_editor_absoluteY="525dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Avg"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="525dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="618dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>