<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    android:background="@drawable/background8"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="222dp"
        android:layout_height="79dp"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="92dp" />

    <LinearLayout
        android:layout_width="158dp"
        android:layout_height="88dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="222dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textColor="@color/black"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="249dp"
        android:layout_height="95dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="222dp">

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/Username"
            android:textColor="?attr/actionMenuTextColor" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="153dp"
        android:layout_height="58dp"
        android:onClick="register"
        android:text="@string/Register"
        android:textColor="@color/black"
        android:textSize="34sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="452dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:onClick="loginnow"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:textSize="34sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="361dp" />
</androidx.constraintlayout.widget.ConstraintLayout>